--- a/inputFormButton.html
+++ b/inputFormButton.html
@@ -14,7 +14,7 @@
             <th>Input</th>
         </tr>
         <tr>
-            <td><label for="name">Nome*</label></td>
+            <td><label for="name">NomeEE*</label></td>
             <td>
                 <input id="name" type="text" name="name" placeholder="Nome" required>
             </td>
